# PracticeRayTracingInOneWeekend

./: CMakeLists.txt  README.md  Utils.hpp  main.cpp
General/: Camera.cpp  Camera.h  Color.cpp  Color.h  CommonHeader.hpp  DielectricMaterial.cpp  DielectricMaterial.h  Hitable.hpp  HitableList.cpp  HitableList.h  LambertianMaterial.cpp  LambertianMaterial.h  Material.hpp  MetalMaterial.cpp  MetalMaterial.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h
GradientPPMGenerator/: main.cpp
RayTracer/: Main.cpp
